// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modifying the Cheerio dom updates the React dom with custom tags 1`] = `
<div>
  <p>
    Paragraph
  </p>
</div>
`;

exports[`modifying the Cheerio dom updates the React dom with custom tags 2`] = `
<div>
  <p>
    Paragraph
  </p>
  <div>
    test
  </div>
</div>
`;

exports[`modifying the Cheerio dom updates the React dom with custom tags 3`] = `
<div>
  <p>
    Paragraph test
  </p>
  <div>
    test
  </div>
</div>
`;
